--- a/UYE.html
+++ b/UYE.html
@@ -1,3 +1,20 @@
 <!--UCSD Yearbook Entry-->
 
-hello
+
+Congrates! You found me! If you enjoyed it, contact me via spurtcarl@gmail.com!
+<!--
+Vigenère
+LiveLikeAGamer is the KEY
+「　」Never Lose ♕-->
+
+
+<!--
+caca2331.github.io/harem/UYE
+63616361323333312e6769746875622e696f2f686172656d2f555945
+gdgbgdgbdcdddddbcoghgjhegihfgccogjgpcpgigbhcgfgncpfffjef
+rlbfrlqfdidphuojxsrpqnhkgulwrkxsrrqtcvguksskbjrvmtflfviw
+0x "rlbfrlqfdidphuojxsrpqnhkgulwrkxsrrqtcvguksskbjrvmtflfviw" is the message, and Virginian sounds like able to solve it.
+MHggInJsYmZybHFmZGlkcGh1b2p4c3JwcW5oa2d1bHdya3hzcnJxdGN2Z3Vrc3NrYmpydm10Zmxm
+dml3IiBpcyB0aGUgbWVzc2FnZSwgYW5kIFZpcmdpbmlhbiBzb3VuZHMgbGlrZSBhYmxlIHRvIHNv
+bHZlIGl0Lg==
+-->
