--- a/UYE.html
+++ b/UYE.html
@@ -1,17 +1,29 @@
 <!--UCSD Yearbook Entry-->
 
+<body>
+Congrates! You found me! If you enjoyed it, contact me via spurtcarl@gmail.com! <br>
 
-Congrates! You found me! If you enjoyed it, contact me via spurtcarl@gmail.com!
-<!--
-Vigenère
-LiveLikeAGamer is the KEY
-「　」Never Lose ♕-->
+Bonus: guess what my favourite anime is? No space and punctuation, all lower letters. <br>
+
+<input id=anime_name> <button onclick="verify()" maxlength="12"> submit </button> 
+</body>
+
+<script>
+theUltimateMessage = ''
+function verify(){
+  alert("sorry, not implemented yet")
+  document.getElementById("anime_name")
+}
+
+</script>
+<!--「　」Never Lose ♕-->
 
 
 <!--
 caca2331.github.io/harem/UYE
 63616361323333312e6769746875622e696f2f686172656d2f555945
 gdgbgdgbdcdddddbcoghgjhegihfgccogjgpcpgigbhcgfgncpfffjef
+Vigenère, LiveLikeAGamer is the KEY
 rlbfrlqfdidphuojxsrpqnhkgulwrkxsrrqtcvguksskbjrvmtflfviw
 0x "rlbfrlqfdidphuojxsrpqnhkgulwrkxsrrqtcvguksskbjrvmtflfviw" is the message, and Virginian sounds like able to solve it.
 MHggInJsYmZybHFmZGlkcGh1b2p4c3JwcW5oa2d1bHdya3hzcnJxdGN2Z3Vrc3NrYmpydm10Zmxm
